src/app/end-screen/end-screen.component.css
:host {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-content: center;
}

div {
  width: 50%;
  margin: 0 auto 0px auto;
  padding-top: 20px;
}

p {
  font-family: 'Roboto', sans-serif;
}

.header {
  font-weight: bold;
  letter-spacing: 0.75rem;
  flex: 1;
  position: relative;
  align-content: center;
  padding-bottom: 0px;
}

.header > app-restart-button {
  position: absolute;
  left: -162px;
}
@media screen and (max-width: 699px) {
  .header {
    padding-bottom: 40px;
  }

  .header > app-restart-button {
    position: static;
  }
}

.header > p {
  font-size: 3rem;
  text-align: center;
}

.list {
  flex: 9;
  margin-bottom: 20px;
}
ol {
  list-style: none;
  counter-reset: player-counter;
}
li {
  counter-increment: player-counter;
  background-color: #ebebeb;
  position: relative;
  height: 3.5rem;
  display: flex;
  align-items: center;
}

li:not(:last-of-type) {
  margin-bottom: 15px;
}

li::before {
  content: counter(player-counter);
  position: absolute;
  background-color: var(--jeopardy-foreground-blue);
  font-family: 'Yantramanav', sans-serif;
  text-shadow: 2px 2px 0px #000000;
  color: var(--jeopardy-font-yellow);
  top: 0.5rem;
  left: -1.5rem;
  width: 2.25rem;
  height: 2.5rem;
  font-size: 2.5rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

/* adjustments for double digit markers */
li:nth-of-type(n + 10)::before {
  width: 3rem;
}

li:nth-of-type(n + 10) p:first-of-type {
  left: 2rem;
}

li > p {
  position: absolute;
  font-size: 1.5rem;
  color: black;
  font-size: 1.5rem;
}

.name {
  left: 1.25rem;
  white-space: nowrap;
}
.score {
  right: 0.5rem;
}

